manifiestos/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-devops
  template:
    metadata:
      labels:
        app: ms-devops
    spec:
      containers:
      - name: ms-devops
        image: baldas/ms-devops:latest
        ports:
        - containerPort: 8080
