manifiestos/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-devops-service
spec:
  type: NodePort  # Especifica el tipo de servicio como NodePort
  selector:
    app: ms-devops  # Asegúrate de que coincida con las etiquetas de tus pods
  ports:
    - protocol: TCP
      port: 8080    # Puerto del servicio (externo)
      targetPort: 8080  # Puerto del contenedor (interno)
      nodePort: 31000  # Puerto específico para acceder desde fuera del clúster
