manifiestos/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ms-devops.local  # <-- Agregar host específico
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ms-devops-service
            port:
              number: 8080
